--- a/static/css/index.css
+++ b/static/css/index.css
@@ -78,13 +78,14 @@ a:focus {
     border-bottom: 1px solid #47748b;
 }
 
-#sidebar ul p {
+#sidebar ul p,
+#sidebar ul h3 {
     color: #fff;
     padding: 10px;
 }
 
-#sidebar ul li a {
-    padding: 10px;
+#sidebar ul li a.tab {
+    padding: 10px 10px 10px 50px;
     font-size: 1.1em;
     display: block;
 }
@@ -134,6 +135,7 @@ ul.CTAs a {
     display: block;
     border-radius: 5px;
     margin-bottom: 5px;
+    padding: 10px;
 }
 
 a.download {
