--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,17 @@
     <title>Collapsible sidebar using Bootstrap 3</title>
 
     <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Our Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
+
+    <!-- Bootstrap Icons-->
+    <svg class="bi bi-chevron-right" width="32" height="32" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
 </head>
 
+<style>
+    $('#draggable').draggable();
+</style>
 <body>
 
 
@@ -60,7 +66,19 @@
 
         <!-- Page Content Holder -->
         <div id="content">
-            {% block body %} {% endblock %}
+            {% block body %} 
+            
+            <div id="draggable" class="card w-25">
+                <h5 class="card-header primary-color white-text">Draggable panel</h5>
+                <div class="card-body">
+                  <p class="card-text">I'm draggable panel</p>
+                </div>
+              </div>
+
+            {% endblock %}
+
+            
+
         </div>
     </div>
 
