--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,6 @@
     <svg class="bi bi-chevron-right" width="32" height="32" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z"/></svg>
 </head>
 
-<style>
-    $('#draggable').draggable();
-</style>
 <body>
 
 
@@ -56,25 +53,9 @@
 
         <!-- Page Content Holder -->
         <div id="content">
-            {% block body %} 
-            
-            <div id="draggable" class="card w-25">
-                <h5 class="card-header primary-color white-text">Draggable panel</h5>
-                <div class="card-body">
-                  <p class="card-text">I'm draggable panel</p>
-                </div>
-              </div>
-
-            {% endblock %}
-
-            
-
+            {% block body %} {% endblock %}
         </div>
     </div>
-
-
-
-
 
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
