--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
         </nav>
 
         <!-- Page Content Holder -->
-        <div id="content">
+        <div id="content" class="text-center">
             {% block body %} {% endblock %}
         </div>
     </div>
