created discover route

--- a/templates/discover.html
+++ b/templates/discover.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %} 
 
 {% block bodycss %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/discover.css') }}" 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/discover.css') }}"> 
 {% endblock %} 
 
 {% block body%} 
