fixed the thingy

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
         </nav>
 
         <!-- Page Content Holder -->
-        <div id="content">
+        <div id="content" class="col-12">
             {% block body %} {% endblock %}
         </div>
     </div>
