--- a/static/css/index.css
+++ b/static/css/index.css
@@ -57,15 +57,15 @@ a:focus {
 }
 
 #sidebar {
-    min-width: 250px;
-    max-width: 250px;
+    min-width: 17vw;
+    max-width: 17vw;
     background: #7386D5;
     color: #fff;
     transition: all 0.3s;
 }
 
 #sidebar.active {
-    margin-left: -250px;
+    margin-left: -17vw;
 }
 
 #sidebar .sidebar-header {
@@ -155,6 +155,7 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
+    width: 83vw;
     padding: 20px;
     min-height: 100vh;
     transition: all 0.3s;
@@ -167,7 +168,7 @@ a.article:hover {
 
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -250px;
+        margin-left: -17vw;
     }
     #sidebar.active {
         margin-left: 0;
