--- a/static/css/discover.css
+++ b/static/css/discover.css
@@ -10,17 +10,18 @@
     height: 100%;
     position: relative;
     overflow: hidden;
-    background-color: rgb(245, 247, 250);
-}
+  }
 
 .card {
-    width: 320px;
-    height: 320px;
+    width: 60vh;
+    height: 60vh;
+    min-width: 200px;
+    min-height: 200px;
     position: absolute;
     top: 50%;
     left: 50%;
     border-radius: 1%;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
     background-color: white;
     transform: translateX(-50%) translateY(-50%) scale(0.95);
 }
