--- a/templates/discover.html
+++ b/templates/discover.html
@@ -218,7 +218,9 @@
 
                 card.style.backgroundImage =
                     "url('https://picsum.photos/320/320/?random=" + Math.round(Math.random() * 1000000) + "')"
-
+                
+                card.style.backgroundSize = "cover"
+                
                 this.board.insertBefore(card, this.board.firstChild)
 
             }
