--- a/static/css/discover.css
+++ b/static/css/discover.css
@@ -13,10 +13,9 @@
   }
 
 .card {
-    width: 60vh;
-    height: 60vh;
-    min-width: 200px;
-    min-height: 200px;
+    width: 60vmin;
+    height: 60vmin;
+
     position: absolute;
     top: 50%;
     left: 50%;
@@ -24,4 +23,11 @@
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
     background-color: white;
     transform: translateX(-50%) translateY(-50%) scale(0.95);
+    color: white;
+    text-align: left;
+    font-size: 50px;
+    padding-top: 3vh;
+    padding-left: 3vh;
+    padding-right: 3vh;
+    font-weight: bold;
 }
