--- a/templates/results.html
+++ b/templates/results.html
@@ -5,14 +5,68 @@
 {% endblock %} 
 
 {% block body%} 
-
-<h1>Results:</h1>
-<div class="row">
-    <div class="col-3">
-        <img height="600" src="https://m.media-amazon.com/images/M/MV5BMTQzMTcwMzgyMV5BMl5BanBnXkFtZTgwMzAyMzQ2MzE@._V1_UY1200_CR90,0,630,1200_AL_.jpg" alt="test">
+    <div class="row mb-3">
+        <div class="col-4">
+            <div class="row mb-3">
+                <h1 class="fixedcol">Results:</h1>
+                <p class="fixedcol">
+                    Enjoy your movie? Make sure to give it a like to add it to your history!
+                </p>
+            </div>
+        </div>
+        <div class="col-8">
+            <div class="row mb-3">
+                <img class="mr-3" width="300" src="https://m.media-amazon.com/images/M/MV5BMTQzMTcwMzgyMV5BMl5BanBnXkFtZTgwMzAyMzQ2MzE@._V1_UY1200_CR90,0,630,1200_AL_.jpg" alt="test">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                    <h5 class="card-title">The Interview</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">2014</h6>
+                    <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
+                    <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
+                    <a href="#" class="card-link">Like</a>
+                    </div>  
+                </div>
+            </div>
+            <div class="row mb-3">
+                <img class="mr-3" width="300" src="https://m.media-amazon.com/images/M/MV5BMTQzMTcwMzgyMV5BMl5BanBnXkFtZTgwMzAyMzQ2MzE@._V1_UY1200_CR90,0,630,1200_AL_.jpg" alt="test">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                    <h5 class="card-title">The Interview</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">2014</h6>
+                    <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
+                    <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
+                    <a href="#" class="card-link">Like</a>
+                    </div>  
+                </div>
+            </div>
+            <div class="row mb-3">
+                <img class="mr-3" width="300" src="https://m.media-amazon.com/images/M/MV5BMTQzMTcwMzgyMV5BMl5BanBnXkFtZTgwMzAyMzQ2MzE@._V1_UY1200_CR90,0,630,1200_AL_.jpg" alt="test">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                    <h5 class="card-title">The Interview</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">2014</h6>
+                    <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
+                    <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
+                    <a href="#" class="card-link">Like</a>
+                    </div>  
+                </div>
+            </div>  
+        </div>
+            
+        </div>
     </div>
-    <div class="col-9">
-        <h3>If you liked this movie, add it to your list</h3>
-    </div>   
-</div>
+
 {% endblock %}
+
+<!-- <div class="row mb-3">
+                    <img class="mr-3" width="300" src="https://m.media-amazon.com/images/M/MV5BMTQzMTcwMzgyMV5BMl5BanBnXkFtZTgwMzAyMzQ2MzE@._V1_UY1200_CR90,0,630,1200_AL_.jpg" alt="test">
+                <div class="card" style="width: 20rem;">
+                    <div class="card-body">
+                    <h5 class="card-title">The Interview</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">2014</h6>
+                    <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
+                    <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
+                    <a href="#" class="card-link">Like</a>
+                    </div>  
+                </div>
+            </div> -->
