check to fix discover

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
                 </li>
                 <p class="h2">Group</p>
                 <li>
-                    <a class="tab" href="#">Create group</a>
+                    <a class="tab" href="/gcreate">Create group</a>
                 </li>
                 <li>
                     <a class="tab" href="#">Join group</a>
