merging, added some more pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                     <a class="tab" href="/gcreate">Create group</a>
                 </li>
                 <li>
-                    <a class="tab" href="#">Join group</a>
+                    <a class="tab" href="/gjoin">Join group</a>
                 </li>
             </ul>
 
