--- a/templates/gcreate.html
+++ b/templates/gcreate.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %} 
 
 {% block bodycss %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/results.css') }}" 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/gcreate.css') }}" 
 {% endblock %}
 
 {% block body %}
@@ -9,7 +9,7 @@
 
 <h2>Group Flix Code</h2>
 <h1 id="code" style="font-size:1000%">1234</h1>
-<button type="button" class="btn btn-primary">Find our Flick!</button>
+<button type="button" class="btn btn-primary mb-3">Find a Flick!</button>
 <h2>People</h2>
     
 <ul class="list-group" style="overflow:scroll; max-height: 300px;">
