--- a/templates/discover.html
+++ b/templates/discover.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/hammer.js/2.0.8/hammer.min.js"></script>
     <script>
         /* LikeCarousel (c) 2019 Simone P.M. github.com/simonepm - Licensed MIT */
-
+        /* comment */
         class Carousel {
 
             constructor(element) {
