--- a/static/css/discover.css
+++ b/static/css/discover.css
@@ -19,6 +19,8 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    /*     top: 50%;
+    left: 50%; */
     border-radius: 1%;
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
     background-color: white;
