navigation for discover

--- a/templates/discover.html
+++ b/templates/discover.html
@@ -259,4 +259,9 @@
 
         let carousel = new Carousel(board)
     </script>
+    <h3 style = "text-align:center;"> Click for description</h3>
+    <h3 style = "text-align:center;"> Swipe Left: not interested</h3>
+    <h3 style = "text-align:center;"> Swipe Right: interested</h3>
+    <h3 style = "text-align:center;"> Swipe Up: seen and liked</h3>
+    <h3 style = "text-align:center;"> Swipe Down: seen and disliked</h3>
 {% endblock %}
