--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
             <ul class="list-unstyled CTAs">
                 <li><a href="/profile" class="download">Profile</a></li>
-                <li><a href="#" class="article">Logout</a></li>
+                <li><a href="/user/sign-out" class="article">Logout</a></li>
             </ul>
         </nav>
 
