--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,14 +7,14 @@
 {% block body %}
 <div class="row h-100">
     <div class="col-6 my-auto"> 
-        <h1 style="font-size:500%;">Welcome,<br>Longhorn!</h1>
+        <h1 style="font-size:500%;">Welcome,<br>{{username}}!</h1>
         <form style="padding-top:30px">
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <input type="name" class="form-control" placeholder="Name">
-            </div>
+            </div> -->
             <div class="form-group">
                 <label>Username</label>
-                <input class="form-control" type="text" placeholder="Username" value="Username" readonly>
+                <input class="form-control" type="text" placeholder="{{username}}" value="{{username}}" readonly>
             </div>
             <div class="form-group">
                 <label>Password</label>
@@ -29,126 +29,6 @@
     <div class="col-6 my-auto text-center">
         <h1>My Flix</h1>
         <ul class="list-group" style="overflow:scroll; max-height: 500px;">
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
-            <li class="list-group-item">
-                <div class="row"style="padding-right:20px;">
-                    <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
-                    </div>
-                    <div class="col-2" style="display:flex; align-items:center;">
-                        <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
-                    </div>
-                </div>
-            </li>
             <li class="list-group-item">
                 <div class="row"style="padding-right:20px;">
                     <div class="col-10" style="display:flex; align-items:center;">
