--- a/templates/gcreate.html
+++ b/templates/gcreate.html
@@ -5,35 +5,22 @@
 {% endblock %}
 
 {% block body %}
-<div class="text-center">
+<div class="text-center"">
 
-<h2>Group Flix Code</h2>
-<h1 id="code" style="font-size:1000%">1234</h1>
-<button type="button" class="btn btn-primary mb-3">Find a Flick!</button>
-<h2>People</h2>
-    
-<ul class="list-group" style="overflow:scroll; max-height: 300px;">
+    <h2>Group Flix Code </h2>
+    <h1 id="code" style="font-size:1000%">ZTUI</h1>
+    <h2>People in the group</h2>
+        
+    <ul class="list-group" style="overflow:scroll; height: 50vh; width: 25vw; margin: auto;">
         <li class="list-group-item">Cras justo odio</li>
         <li class="list-group-item">Dapibus ac facilisis in</li>
         <li class="list-group-item">Morbi leo risus</li>
         <li class="list-group-item">Porta ac consectetur ac</li>
         <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        <li class="list-group-item">Vestibulum at eros</li>
+        
+    
     </ul>
+    <button type="button" class="btn btn-primary mb-3" style="margin-top: 25px;">Find a Flick!</button>
 
 </div>
 {% endblock %}
