--- a/static/css/discover.css
+++ b/static/css/discover.css
@@ -6,10 +6,11 @@
 }*/
 
 #board {
-    width: 100%;
-    height: 80%;
+    width: 75vw;
+    height: 75vmin;
     position: relative;
     overflow: hidden;
+    margin: auto; 
   }
 
 .card {
