--- a/templates/gjoin.html
+++ b/templates/gjoin.html
@@ -9,10 +9,10 @@
     <div class="col  my-auto">
         <h2>Join a group!</h2>
         <form>
-            <div class="form-group">
+            <div class="form-group" style="width: 25vw; margin: 0 auto;"">
                 <input class="form-control form-control-lg" type="text" maxlength="4" placeholder="4-digit code">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" style="margin-top: 25px;">Submit</button>
         </form>
     </div>
 </div>
