Added joinsuccess, working on search

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                     <a class="tab" href="/discover">Discover</a>
                 </li>
                 <li>
-                    <a class="tab" href="#">Search</a>
+                    <a class="tab" href="/search">Search</a>
                 </li>
                 <p class="h2">Group</p>
                 <li>
