--- a/static/css/results.css
+++ b/static/css/results.css
@@ -1,8 +1,9 @@
 .fixedcol1{
     position:fixed;
     top: 30%;
+    font-size: 400%;
 }
 .fixedcol2{
     position:fixed;
-    top: 40%;
+    top: 45%;
 }
