--- a/templates/gjoin.html
+++ b/templates/gjoin.html
@@ -10,7 +10,7 @@
         <h2>Join a group!</h2>
         <form>
             <div class="form-group">
-                <input class="form-control form-control-lg" type="text" maxlength="4" placeholder="4-digit code">
+                <input class="form-control form-control-lg text-center mx-auto" type="text" maxlength="4" placeholder="4-digit code" style="width: 300px;">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
         </form>
