--- a/templates/results.html
+++ b/templates/results.html
@@ -8,7 +8,7 @@
     <div class="row mb-3">
         <div class="col-4">
             <div class="row mb-3">
-                <h1 class="fixedcol1">Results:</h1>
+                <h1 class="fixedcol1">Results!</h1>
                 <p class="fixedcol2">
                     Enjoy your movie? Make sure to give it<br>a like to add it to your history!
                 </p>
