--- a/templates/gcreate.html
+++ b/templates/gcreate.html
@@ -9,18 +9,18 @@
 
     <h2>Group Flix Code </h2>
     <h1 id="code" style="font-size:1000%">ZTUI</h1>
-    <h2>People in the group</h2>
-        
-    <ul class="list-group" style="overflow:scroll; height: 50vh; width: 25vw; margin: auto;">
+    <h6>Click here when all members are in!</h6>
+    <button type="button" class="btn btn-primary mb-3">Find a Flick!</button>  
+    <h3>Group members</h3>
+    <ul class="list-group mx-auto" style="overflow:scroll; max-height: 40vh; width: 25vw;">
         <li class="list-group-item">Cras justo odio</li>
-        <li class="list-group-item">Dapibus ac facilisis in</li>
-        <li class="list-group-item">Morbi leo risus</li>
-        <li class="list-group-item">Porta ac consectetur ac</li>
-        <li class="list-group-item">Vestibulum at eros</li>
-        
-    
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Cras justo odio</li>
+        <li class="list-group-item">Cras justo odio</li>
     </ul>
-    <button type="button" class="btn btn-primary mb-3" style="margin-top: 25px;">Find a Flick!</button>
-
 </div>
 {% endblock %}
