added search results page, fixed search

--- a/templates/gjoin.html
+++ b/templates/gjoin.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="text-center row h-100">
-    <div class="col  my-auto">
+    <div class="col  my-auto" style="position:absolute; top: 30%;">
         <h2>Join a group!</h2>
         <form>
             <div class="form-group" style="width: 25vw; margin: 0 auto;">
