--- a/templates/search.html
+++ b/templates/search.html
@@ -8,7 +8,7 @@
 {% block body%} 
 
 
-<div style="position:relative; top:30%">
+<div style="margin-top: 20%;">
 <h3 class="text-center">Search for movies you've enjoyed to add them to your favorites list!</h3>
 
 <form id="searchform" class="form-inline d-flex justify-content-center md-form form-sm mt-0 mx-auto" style="width:500px">
