--- a/templates/gjoin.html
+++ b/templates/gjoin.html
@@ -10,7 +10,7 @@
         <h2>Join a group!</h2>
         <form>
             <div class="form-group">
-                <input class="form-control form-control-lg text-danger" type="text" maxlength="4" placeholder="4-digit code" id="code-input">
+                <input class="form-control form-control-lg" type="text" maxlength="4" placeholder="4-digit code" id="code-input">
             </div>
             <p class="text-danger" style="display: none;" id="error-msg">Not a valid code!</p>
             <button class="btn btn-primary" id="sub" type="button">Submit</button>
