--- a/templates/gjoin.html
+++ b/templates/gjoin.html
@@ -1,7 +1,7 @@
 {% extends "index.html" %} 
 
 {% block bodycss %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/gjoin.css') }}" 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/gjoin.css') }}" >
 {% endblock %}
 
 {% block body %}
