fixed tabbing in sidebar

--- a/templates/index.html
+++ b/templates/index.html
@@ -38,17 +38,17 @@
             <ul class="list-unstyled components">
                 <p class="h2">Home</p>
                 <li>
-                    <a href="/discover">Discover</a>
+                    <a class="tab" href="/discover">Discover</a>
                 </li>
                 <li>
                     <a class="tab" href="/search">Search</a>
                 </li>
                 <p class="h2">Group</p>
                 <li>
-                    <a href="/gcreate">Create group</a>
+                    <a class="tab" href="/gcreate">Create group</a>
                 </li>
                 <li>
-                    <a href="/gjoin">Join group</a>
+                    <a class="tab" href="/gjoin">Join group</a>
                 </li>
 
                 <!-- 
