--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,7 +32,7 @@
             <li class="list-group-item">
                 <div class="row"style="padding-right:20px;">
                     <div class="col-10" style="display:flex; align-items:center;">
-                        Cras justo odio
+                        Avengers Endgame <!-- Populate This -->
                     </div>
                     <div class="col-2" style="display:flex; align-items:center;">
                         <button type="button" class="btn btn-outline-danger float-right btn-sm">Remove</button>
