--- a/templates/gcreate.html
+++ b/templates/gcreate.html
@@ -10,7 +10,11 @@
 
 <h2>Group Flix Code</h2>
 <h1 id="code" style="font-size:1000%">{{code}}</h1>
+
+<form action="/results?code={{code}}">
 <button type="button" class="btn btn-primary mb-3">Find a Flick!</button>
+</form>
+
 <h2>People</h2>
     
 <ul class="list-group" style="overflow:scroll; max-height: 300px;" id="people">
