--- a/templates/results.html
+++ b/templates/results.html
@@ -16,42 +16,17 @@
     </div>
     
     <div class="col-8">
+        {% for movie in top3 %}
             <div class="row mb-3">
-                <img class="mr-3" width="300" height="400" style="box-shadow: 2px 2px 5px #8F8F8F;" src="https://images-na.ssl-images-amazon.com/images/I/712XSI-MlYL._AC_SL1023_.jpg" alt="test">
                 <div class="card" style="width: 20rem; box-shadow: 2px 2px 5px #8F8F8F;">
                     <div class="card-body">
-                        <h5 class="card-title">The Interview</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">2014</h6>
-                        <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
-                        <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
-                        <a href="#" class="card-link">Like</a>
+                        <h5 class="card-title">{{movie["primary_title"]}}</h5>
+                        <h6 class="card-subtitle mb-2 text-muted">{{movie["start_year"]}}</h6>
+                        <a href="https://www.imdb.com/title/{{movie['id']}}/" class="card-link">IMDB</a>
                     </div>  
                 </div>
             </div>
-            <div class="row mb-3">
-                <img class="mr-3" width="300" height="400" style="box-shadow: 2px 2px 5px #8F8F8F;" src="https://images-na.ssl-images-amazon.com/images/I/712XSI-MlYL._AC_SL1023_.jpg" alt="test">
-                <div class="card" style="width: 20rem; box-shadow: 2px 2px 5px #8F8F8F;">
-                    <div class="card-body">
-                        <h5 class="card-title">The Interview</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">2014</h6>
-                        <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
-                        <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
-                        <a href="#" class="card-link">Like</a>
-                    </div>  
-                </div>
-            </div>
-            <div class="row mb-3">
-                <img class="mr-3" width="300" height="400" style="box-shadow: 2px 2px 5px #8F8F8F;" src="https://images-na.ssl-images-amazon.com/images/I/712XSI-MlYL._AC_SL1023_.jpg" alt="test">
-                <div class="card" style="width: 20rem; box-shadow: 2px 2px 5px #8F8F8F;">
-                    <div class="card-body">
-                        <h5 class="card-title">The Interview</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">2014</h6>
-                        <p class="card-text">Dave Skylark and his producer Aaron Rapaport run the celebrity tabloid show "Skylark Tonight". When they land an interview with a surprise fan, North Korean dictator Kim Jong-un, they are recruited by the CIA to assassinate him.</p>
-                        <a href="https://www.imdb.com/title/tt2788710/" class="card-link">IMDB</a>
-                        <a href="#" class="card-link">Like</a>
-                    </div>  
-                </div>
-            </div>
+        {% endfor %}
     </div>
 </div>
 
