--- a/templates/gcreate.html
+++ b/templates/gcreate.html
@@ -11,9 +11,7 @@
 <h2>Group Flix Code</h2>
 <h1 id="code" style="font-size:1000%">{{code}}</h1>
 
-<form action="/results?code={{code}}">
-<button type="button" class="btn btn-primary mb-3">Find a Flick!</button>
-</form>
+<button type="button" href="/results?code={{code}}" class="btn btn-primary mb-3">Find a Flick!</button>
 
 <h2>People</h2>
     
